--- a/.github/ISSUE_TEMPLATE/2_bug_report_macos.yml
+++ b/.github/ISSUE_TEMPLATE/2_bug_report_macos.yml
@@ -1,7 +1,7 @@
 name: "Report a macOS Issue"
 description: "Create a report for a runtime related macOS Issue"
 labels: ["os:mac"]
-type: Bug
+#type: Bug
 body:
 - type: textarea
   id: mpv_info
