--- a/.github/ISSUE_TEMPLATE/2_bug_report_linux.yml
+++ b/.github/ISSUE_TEMPLATE/2_bug_report_linux.yml
@@ -1,7 +1,7 @@
 name: "Report a Linux Issue"
 description: "Create a report for a runtime related Linux Issue"
 labels: ["os:linux"]
-type: Bug
+#type: Bug
 body:
 - type: textarea
   id: mpv_information
