--- a/.github/ISSUE_TEMPLATE/2_bug_report_windows.yml
+++ b/.github/ISSUE_TEMPLATE/2_bug_report_windows.yml
@@ -1,7 +1,7 @@
 name: "Report a Windows Issue"
 description: "Create a report for a runtime related Windows Issue"
 labels: ["os:win"]
-type: Bug
+#type: Bug
 body:
 - type: textarea
   id: mpv_information
