--- a/.github/ISSUE_TEMPLATE/3_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/3_bug_report.yml
@@ -1,7 +1,7 @@
 name: "Report an Issue on other platforms"
 description: "Create a report for a runtime related Issue on other platforms"
 labels: []
-type: Bug
+#type: Bug
 body:
 - type: textarea
   id: mpv_information
